# turbovault

./: .env.example  .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  LICENSE  Makefile  PUBLISHING.md  README.md  config.example.yaml  docker-compose.yml  justfile
.github/workflows/: ci.yml  docs.yml  release.yml
crates/turbovault/: Cargo.toml  README.md
crates/turbovault-batch/: Cargo.toml  README.md
crates/turbovault-batch/src/: lib.rs
crates/turbovault-core/: Cargo.toml  README.md
crates/turbovault-core/src/: cache.rs  config.rs  error.rs  lib.rs  metrics.rs  models.rs  multi_vault.rs  profiles.rs  resilience.rs  utils.rs  validation.rs
crates/turbovault-export/: Cargo.toml  README.md
crates/turbovault-export/src/: lib.rs
crates/turbovault-graph/: Cargo.toml  README.md
crates/turbovault-graph/src/: graph.rs  health.rs  lib.rs
crates/turbovault-parser/: Cargo.toml  README.md
crates/turbovault-parser/src/: blocks.rs  engine.rs  lib.rs  parsers.rs
crates/turbovault-parser/src/parsers/: callouts.rs  embeds.rs  frontmatter_parser.rs  headings.rs  tags.rs  tasks.rs  wikilinks.rs
crates/turbovault-server/: Cargo.toml  README.md
crates/turbovault-server/benches/: tool_benchmarks.rs
crates/turbovault-server/src/: tools.rs
crates/turbovault-server/tests/: integration_test.rs  test_all_mcp_tools.rs  test_standard_response.rs
crates/turbovault-tools/: Cargo.toml  README.md
crates/turbovault-tools/src/: analysis_tools.rs  batch_tools.rs  export_tools.rs  file_tools.rs  graph_tools.rs  lib.rs  metadata_tools.rs  output_formatter.rs  relationship_tools.rs  response_utils.rs  search_engine.rs  search_tools.rs  templates.rs  validation_tools.rs  vault_lifecycle.rs
crates/turbovault-tools/tests/: test_async_error_paths.rs  test_batch_tools.rs  test_cli_vault_dedup.rs  test_file_tools.rs  test_graph_tools.rs  test_metadata_tools.rs  test_search_engine_integration.rs  test_search_tools.rs  test_vault_tilde_expansion.rs
crates/turbovault-vault/: Cargo.toml  README.md
crates/turbovault-vault/src/: atomic.rs  edit.rs  lib.rs  manager.rs  watcher.rs
crates/turbovault/benches/: tool_benchmarks.rs
crates/turbovault/src/: lib.rs  resources.rs  tools.rs
crates/turbovault/tests/: integration_test.rs  test_all_mcp_tools.rs
docs/: DOCUMENTATION_GUIDE.md  README.md
docs/api-reference/: index.md  ofm.md  tools.md
docs/configuration/: index.md  multi-vault.md
docs/crates/: README.md
docs/deployment/: claude-desktop.md  docker.md  index.md
docs/development/: architecture.md  building.md  index.md
docs/getting-started/: installation.md  quick-start.md
docs/security/: mcp-scanner.md
docs/troubleshooting/: faq.md  index.md
scripts/: publish.sh
tests/: batch_and_vault_integration_test.rs  integration_test.rs
tests/integration/: batch_operations_test.rs  export_test.rs  vault_lifecycle_test.rs
